welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:16: error: '(' expected but 'else' found.
	if else (estDosMur()==true){{
           ^DwarfCode:29: error: illegal start of simple expression
	}
        ^